Bug 91462 - Menu items hidden when scrolled down
Summary: Menu items hidden when scrolled down
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-05-22 10:58 UTC by Arnaud LE CAM
Modified: 2016-10-25 19:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Menu bug (29.85 KB, image/png)
2015-05-22 16:42 UTC, Arnaud LE CAM
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud LE CAM 2015-05-22 10:58:09 UTC
All menu items are hidden when they scroll down
only with SAL_USE_VCLPLUGIN=gen
Comment 1 Adolfo Jayme Barrientos 2015-05-22 16:35:51 UTC
By menu items do you mean _dropdowns_? If so, I can confirm the issue.
Comment 2 Arnaud LE CAM 2015-05-22 16:42:28 UTC
Created attachment 115841 [details]
Menu bug

Menu title disappears when it's clicked, see attachment please
Comment 3 László Németh 2015-06-09 09:31:43 UTC
Confirmed with Version: 5.1.0.0.alpha1+
Build ID: 9535d5d1fdbd1a529e4d7a6b5e3df6c551465364
Locale: en-US (en_US.UTF-8), too.
Comment 4 László Németh 2015-06-09 10:40:01 UTC
Bibisected with bibisect-50max.

Perhaps the color of the title of the opened menu is the same, as its background?

 c2bcaa9db245ffb995908b1cf6d020ca28b79da3 is the first bad commit
commit c2bcaa9db245ffb995908b1cf6d020ca28b79da3
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 23:10:59 2015 +0800

    source-hash-186eefd7e2020c65db32dacc3a9389573e7cddeb
    
    commit 186eefd7e2020c65db32dacc3a9389573e7cddeb
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Fri May 15 17:19:24 2015 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Fri May 15 17:21:00 2015 +0100
    
        gtk3: render native menubar and menubaritems
    
        this needs the addition of a new MenuBarHighlightTextColor
        which defaults to MenuHighlightTextColor on other platforms
    
        Change-Id: Id0550294f1778229cbbe154857ba16c629dc5a87

@Caolán: I wonder, that Windows Bug 91645 - Menu title turns white when clicked, is related to this bug, or not?
Comment 5 Commit Notification 2015-06-09 12:52:05 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9085cb9aa97ce5a198e321a1c6303ac64bd735f0

tdf#91462 - fix invisible menu titles of open menus

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2015-06-09 13:06:23 UTC
*** Bug 91645 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2015-06-09 13:41:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=753fa7ca2fbeb6dfc3f014a68c7d48c6e227be34

tdf#91462 MenuBarHighlightTextColor should default to MenuHighlightTextColor

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-09 13:43:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=df0965356cb90b20fb6d8a26859aebb623b38ef4&h=libreoffice-5-0

tdf#91462 MenuBarHighlightTextColor should default to MenuHighlightTextColor

It will be available in 5.0.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Arnaud LE CAM 2015-06-10 16:27:52 UTC
Tested with
Version: 5.0.0.0.beta3
Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c
Locale : fr-FR (fr_FR.UTF-8)
All's right now, nice job László & Caolán !
Comment 10 Robinson Tryon (qubit) 2015-12-17 09:11:58 UTC Comment hidden (obsolete)