tdf#91462 - fix invisible menu titles of open menus

(cherry-picked from 9085cb9aa97ce5a198e321a1c6303ac64bd735f0)

Change-Id: I6c9346917b813c662307999fe1c19a6c0665a656